--- a/bitcoin-wallet-nodejs/package.json
+++ b/bitcoin-wallet-nodejs/package.json
@@ -6,6 +6,7 @@
   "author": "jimmy zhang",
   "license": "MIT",
   "dependencies": {
+    "fast-csv": "^2.4.1",
     "mixin-node-client": "^0.7.3"
   }
 }
