--- a/bitcoin-wallet-nodejs/package.json
+++ b/bitcoin-wallet-nodejs/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "fast-csv": "^2.4.1",
-    "mixin-node-client": "^0.7.3"
+    "mixin-node-client": "^0.7.3",
+    "pem-file": "^1.0.1"
   }
 }
