fetch market price information

--- a/bitcoin-wallet-nodejs/package.json
+++ b/bitcoin-wallet-nodejs/package.json
@@ -9,6 +9,7 @@
     "fast-csv": "^2.4.1",
     "inquirer": "^6.2.2",
     "mixin-node-client": "^0.8.0",
+    "msgpack5": "^4.2.1",
     "path": "^0.12.7",
     "pem-file": "^1.0.1"
   }
